style update, button displaying wrong color fixed

--- a/client/src/updateUser/updateUser.css
+++ b/client/src/updateUser/updateUser.css
@@ -36,7 +36,7 @@
   margin-top: 5px;
   text-align: center;
   font-weight: bold;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
